--- a/Proyecto PHP/index.html
+++ b/Proyecto PHP/index.html
@@ -87,7 +87,7 @@
                         </div>
 
                         <!--Formulario.-->
-                        <form action="procesar_cv.php" method="POST" enctype="multipart/form-data" 
+                        <form action="send_cv.php" method="POST" enctype="multipart/form-data" 
                             class="p-4 shadow-sm rounded-4 needs-validation" 
                             style="background-color: #E3E3E3;" novavalidation>
 
