--- a/Proyecto PHP/index.html
+++ b/Proyecto PHP/index.html
@@ -15,7 +15,7 @@
     <!--Cabecera-->
     <header>
         <div class="navbar navbar-dark bg-primary mb-4">
-            <div class="container"> <span class="navbar-brand mb-0 h1"><i class="bi bi-file-earmark-person"></i> CV Generator Pro</span> 
+            <div class="container"> <span class="navbar-brand mb-0 h1"><i class="bi bi-file-earmark-person"></i> CV Generator</span> 
                 <a href="listado.php" class="btn btn-outline-light btn-sm">Ver Mis CVs</a>
             </div>
 
