--- a/Proyecto PHP/index.html
+++ b/Proyecto PHP/index.html
@@ -146,7 +146,7 @@
 
                                 <div class="row g-3">
                                     <label class="form-label">Resumen Académico</label>
-                                    <textarea name="academica" class="form-control" rows="4"
+                                    <textarea name="formacion" class="form-control" rows="4"
                                         placeholder="Describe tus estudios anteriores..."></textarea>
                                 </div>
                             </section>
