--- a/Proyecto PHP/index.html
+++ b/Proyecto PHP/index.html
@@ -39,10 +39,10 @@
 
                             <ul class="nav nav-pills flex-column gap-1">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="#">Home</a>
+                                    <a class="nav-link active" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Mis curriculums</a>
+                                    <a class="nav-link" href="listado.php">Mis curriculums</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Formación</a>
