--- a/Proyecto PHP/index.html
+++ b/Proyecto PHP/index.html
@@ -65,13 +65,13 @@
                     <div class="py-4">
 
                         <!--Barra de progeso.-->
-                        <div class=" rounded-4 shadow-sm p-4 mb-4" style="background-color: #E3E3E3;">
+                        <div class="rounded-4 shadow-sm p-4 mb-4" style="background-color: #E3E3E3;">
                             <div class="d-flex justify-content-between mb-2">
-                                <strong>Paso 1 de 5</strong>
-                                <span class="text-primary fw-semibold">20% completado</span>
+                                <strong>Progreso</strong>
+                                <span id="numPorcentaje" class="text-primary fw-semibold">0%</span>
                             </div>
-                            <div id="progressBar" class="progress">
-                                <div class="progress-bar" style="width: 20%"></div>
+                            <div class="progress">
+                                <div id="progressBar" class="progress-bar"></div>
                             </div>
                         </div>
 
@@ -200,6 +200,7 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="javascript/script.js"></script>
 </body>
 
 </html>
