--- a/Proyecto PHP/index.html
+++ b/Proyecto PHP/index.html
@@ -7,7 +7,6 @@
     <!--Links.-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="Css/custom.css">
     <title>Generador de CV</title>
 </head>
 
@@ -15,12 +14,13 @@
     <!--Cabecera-->
     <header>
         <div class="navbar navbar-dark bg-primary mb-4">
+            <div class="container"> <span class="navbar-brand mb-0 h1"><i class="bi bi-file-earmark-person"></i> CV Generator</span> 
+            </div>
 
-            <div class="me-4 text-end">
+            <div class="me-4">
                 <button type="button" class="btn btn-outline-light ">Inicia Sesión</button>
                 <button type="button" class="btn bg-light ">Registrate</button>
             </div>
-
         </div>
     </header>
     <!--Contenido principal -->
@@ -40,15 +40,6 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="listado.php">Mis curriculums</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Formación</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Habilidades</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Idiomas</a>
                                 </li>
                             </ul>
 
