--- a/Proyecto PHP/index.html
+++ b/Proyecto PHP/index.html
@@ -14,7 +14,12 @@
     <!--Cabecera-->
     <header>
         <div class="navbar navbar-dark bg-primary mb-4">
-            <div class="container"> <span class="navbar-brand mb-0 h1"><i class="bi bi-file-earmark-person"></i> CV Generator</span> 
+            <div class="container">              
+                <button class="btn">
+                    <a class="nav-link navbar-brand mb-0 h1" href="index.html">
+                        <i class="bi bi-file-earmark-person"></i>
+                            CV Generator</a>
+                </button>
             </div>
 
             <div class="me-4">
@@ -36,7 +41,7 @@
 
                             <ul class="nav nav-pills flex-column gap-1">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="index.html">Home</a>
+                                    <a class="nav-link active" href="index.html">Creación Curriculum</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="listado.php">Mis curriculums</a>
