validacion ajustes diseño

--- a/Proyecto PHP/index.html
+++ b/Proyecto PHP/index.html
@@ -111,7 +111,7 @@
 
                                     <div class="col-md-6">
                                         <label class="form-label">Teléfono <span class="text-danger">*</span></label>
-                                        <input type="tel" name="telefono" class="form-control" placeholder="+36 000001002" pattern ="[0-9{9}]" required>
+                                        <input type="tel" name="telefono" class="form-control" placeholder="+36 000001002" pattern ="[0-9]{9}" required>
                                     </div>
                                     <div class="col-md-6">
                                         <label class="form-label">Dirección Domicilio <span class="text-danger">*</span></label>
