--- a/Proyecto PHP/index.html
+++ b/Proyecto PHP/index.html
@@ -12,26 +12,22 @@
 
 <body class="bg-dark">
 
-    <!--Cabecera-->
+
     <header>
-        <div class="navbar navbar-dark bg-primary mb-4 ml-2">
-            <div class="container">              
+        <!--Cabecera-->
+        <div class="navbar navbar-dark bg-primary mb-4">
+            <div class="container-fluid">              
                 <button class="btn">
                     <a class="nav-link navbar-brand mb-0 h1" href="index.html">
-                        <i class="bi bi-file-earmark-person"></i>
-                            CV Generator</a>
+                        <i class="bi bi-file-earmark-person"></i>Creador Curriculums</a>
                 </button>
-            </div>
-
-            <div class="me-4">
-                <button type="button" class="btn btn-outline-light ">Inicia Sesión</button>
-                <button type="button" class="btn bg-light ">Registrate</button>
             </div>
         </div>
     </header>
 
     <!--Contenido principal -->
     <main class="mb-5">
+        <h2 class=" text-info mb-4 ms-4">Crea tus propios curriculums</h2>
         <div class="container-fluid">
             <div class="row">
 
@@ -182,16 +178,16 @@
                 </section>
 
                 <!--Relleno columna derecha.-->
-                <aside class="col-3">
+                <!-- <aside class="col-3">
                     <div class="px-3 py-4 h-100">
                         <div class=" rounded-4 shadow-sm p-4 h-100 text-muted" style="background-color: #e3f2fd;">
                             <strong>Vista previa del CV</strong>
                             <p class="small mt-2">
-                                Aquí podrás mostrar cómo va quedando el currículum.
+                                Mostrar visualizacion de curriculum
                             </p>
                         </div>
                     </div>
-                </aside>
+                </aside> -->
 
             </div>
         </div>
