--- a/Proyecto PHP/index.html
+++ b/Proyecto PHP/index.html
@@ -16,7 +16,7 @@
     <header>
         <!--Cabecera-->
         <div class="navbar navbar-dark bg-primary mb-4">
-            <div class="container-fluid">              
+            <div class="container-fluid">
                 <button class="btn">
                     <a class="nav-link navbar-brand mb-0 h1" href="index.html">
                         <i class="bi bi-file-earmark-person"></i>Creador Curriculums</a>
@@ -27,13 +27,17 @@
 
     <!--Contenido principal -->
     <main class="mb-5">
+        <!--Encabezado segun el fichero.-->
         <h2 class=" text-info mb-4 ms-4">Crea tus propios curriculums</h2>
+
+        <!--Contenedor de boostrap  para todo el contenido restante.-->
         <div class="container-fluid">
+            <!--Primer row para colocar el resto del body dentro de una fila.-->
             <div class="row">
 
                 <!--Menú de navegación.-->
-                <div class="col-3">
-                    <div class="px-3 py-4 h-100">
+                <div class="col-md-3">
+                    <div class="px-3 py-4">
 
                         <nav class=" rounded-4 shadow-sm p-3 h-100" style="background-color: #e3f2fd;">
 
@@ -52,8 +56,9 @@
                 </div>
 
                 <!--Contenido principal,inputs.-->
-                <section class="col-6">
-                    <div class="py-4">
+                <section class="col-md-9 mt-4">
+
+                    <div class="col-lg-10 col-xl-9 mx-auto">
 
                         <!--Barra de progeso.-->
                         <div class="rounded-4 shadow-sm p-4 mb-4" style="background-color: #E3E3E3;">
@@ -76,14 +81,14 @@
                                 <div class="text-muted small">JPG o PNG · máx 2MB</div>
 
 
-                                
+
                             </div>
                         </div>
 
                         <!--Formulario.-->
-                        <form action="send_cv.php" method="POST" enctype="multipart/form-data" 
-                            class="p-4 shadow-sm rounded-4 needs-validation" 
-                            style="background-color: #E3E3E3;" novavalidation>
+                        <form action="send_cv.php" method="POST" enctype="multipart/form-data"
+                            class="p-4 shadow-sm rounded-4 needs-validation" style="background-color: #E3E3E3;"
+                            novavalidation>
 
                             <!--Datos personales.-->
                             <section class="mb-5">
@@ -92,30 +97,40 @@
 
                                 <div class="row g-3">
                                     <div class="col-md-6">
-                                        <label for="validationServer01" class="form-label">Nombre <span class="text-danger">*</span></label>
-                                        <input type="text" name="nombre" class="form-control" placeholder="Antonio José" required maxlength="15">
+                                        <label for="validationServer01" class="form-label">Nombre <span
+                                                class="text-danger">*</span></label>
+                                        <input type="text" name="nombre" class="form-control" placeholder="Antonio José"
+                                            required maxlength="15">
                                     </div>
-                                    <div class="col-md-6"> 
-                                        <label for="validationServer01" class="form-label">Apellidos <span class="text-danger">*</span></label> 
-                                        <input type="text" name="apellidos" class="form-control"  placeholder="Marún Virués" required maxlength="45">
+                                    <div class="col-md-6">
+                                        <label for="validationServer01" class="form-label">Apellidos <span
+                                                class="text-danger">*</span></label>
+                                        <input type="text" name="apellidos" class="form-control"
+                                            placeholder="Marún Virués" required maxlength="45">
                                     </div>
 
                                     <div class="col-md-6">
-                                        <label for="validationServer01" class="form-label">Correo Electrónico <span class="text-danger">*</span></label>
-                                        <input type="email" name="email" class="form-control" placeholder="designer@gmail.com" required>
+                                        <label for="validationServer01" class="form-label">Correo Electrónico <span
+                                                class="text-danger">*</span></label>
+                                        <input type="email" name="email" class="form-control"
+                                            placeholder="designer@ejemplo.com" required>
                                     </div>
 
                                     <div class="col-md-6">
                                         <label class="form-label">Teléfono <span class="text-danger">*</span></label>
-                                        <input type="tel" name="telefono" class="form-control" placeholder="+36 000001002" pattern ="[0-9]{9}" required>
+                                        <input type="tel" name="telefono" class="form-control" placeholder="000001002"
+                                            pattern="[0-9]{9}" required>
                                     </div>
                                     <div class="col-md-6">
-                                        <label class="form-label">Dirección Domicilio <span class="text-danger">*</span></label>
-                                        <input type="text" name="domicilio" class="form-control" placeholder="Calle Lito 1" required>
+                                        <label class="form-label">Dirección Domicilio <span
+                                                class="text-danger">*</span></label>
+                                        <input type="text" name="domicilio" class="form-control"
+                                            placeholder="Calle Lito 1" required>
                                     </div>
 
                                     <div class="col-md-6">
-                                        <label for="validationServer01"  class="form-label">Foto de Perfil <span class="text-danger">*</span></label>
+                                        <label for="validationServer01" class="form-label">Foto de Perfil <span
+                                                class="text-danger">*</span></label>
                                         <input type="file" name="foto" class="form-control" required>
                                     </div>
                                 </div>
@@ -127,7 +142,8 @@
                                 <h4 class="border-bottom pb-2 mb-3 text-primary">Experiencia Laboral </h4>
 
                                 <div class="row g-3">
-                                    <label class="form-label">Resumen de Experiencia <span class="text-danger">*</span></label>
+                                    <label class="form-label">Resumen de Experiencia <span
+                                            class="text-danger">*</span></label>
                                     <textarea name="experiencia" class="form-control" rows="4"
                                         placeholder="Describe tus puestos anteriores..." required></textarea>
                                 </div>
@@ -139,7 +155,8 @@
                                 <h4 class="border-bottom pb-2 mb-3 text-primary">Formación Académica</h4>
 
                                 <div class="row g-3">
-                                    <label class="form-label">Resumen Académico <span class="text-danger">*</span></label>
+                                    <label class="form-label">Resumen Académico <span
+                                            class="text-danger">*</span></label>
                                     <textarea name="formacion" class="form-control" rows="4"
                                         placeholder="Describe tus estudios anteriores..." required></textarea>
                                 </div>
@@ -151,13 +168,16 @@
                                 <div class="row g-3">
 
                                     <div class="col-md-6">
-                                        <h4 class="border-bottom pb-2 mb-3 text-primary">Habilidades <span class="text-danger">*</span></h4>
+                                        <h4 class="border-bottom pb-2 mb-3 text-primary">Habilidades <span
+                                                class="text-danger">*</span></h4>
                                         <textarea name="habilidades" class="form-control" rows="3"
-                                            placeholder="PHP, MySQL, Trabajo en equipo, liderazgo, Git" required></textarea>
+                                            placeholder="PHP, MySQL, Trabajo en equipo, liderazgo, Git"
+                                            required></textarea>
                                     </div>
 
                                     <div class="col-md-6">
-                                        <h4 class="border-bottom pb-2 mb-3 text-primary">Idiomas <span class="text-danger">*</span></h4>
+                                        <h4 class="border-bottom pb-2 mb-3 text-primary">Idiomas <span
+                                                class="text-danger">*</span></h4>
                                         <textarea name="idiomas" class="form-control" rows="3"
                                             placeholder="Inglés (B2), Alemán (A1)..." required></textarea>
                                     </div>
@@ -176,19 +196,6 @@
 
                     </div>
                 </section>
-
-                <!--Relleno columna derecha.-->
-                <!-- <aside class="col-3">
-                    <div class="px-3 py-4 h-100">
-                        <div class=" rounded-4 shadow-sm p-4 h-100 text-muted" style="background-color: #e3f2fd;">
-                            <strong>Vista previa del CV</strong>
-                            <p class="small mt-2">
-                                Mostrar visualizacion de curriculum
-                            </p>
-                        </div>
-                    </div>
-                </aside> -->
-
             </div>
         </div>
     </main>
@@ -196,4 +203,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="javascript/script.js"></script>
 </body>
+
 </html>
