--- a/Proyecto PHP/index.html
+++ b/Proyecto PHP/index.html
@@ -118,7 +118,7 @@
 
                                     <div class="col-md-6">
                                         <label class="form-label">Teléfono <span class="text-danger">*</span></label>
-                                        <input type="tel" name="telefono" class="form-control" placeholder="000001002"
+                                        <input type="tel" name="telefono" class="form-control" placeholder="000001002 max 9 números"
                                             pattern="[0-9]{9}" required>
                                     </div>
                                     <div class="col-md-6">
