--- a/Proyecto PHP/index.html
+++ b/Proyecto PHP/index.html
@@ -100,13 +100,13 @@
                                         <label for="validationServer01" class="form-label">Nombre <span
                                                 class="text-danger">*</span></label>
                                         <input type="text" name="nombre" class="form-control" placeholder="Antonio José"
-                                            required maxlength="15">
+                                         pattern="[A-Za-zÁÉÍÓÚáéíóúÑñ ]+"required maxlength="15">
                                     </div>
                                     <div class="col-md-6">
                                         <label for="validationServer01" class="form-label">Apellidos <span
                                                 class="text-danger">*</span></label>
                                         <input type="text" name="apellidos" class="form-control"
-                                            placeholder="Marún Virués" required maxlength="45">
+                                            placeholder="Marún Virués" pattern="[A-Za-zÁÉÍÓÚáéíóúÑñ ]+" required maxlength="45">
                                     </div>
 
                                     <div class="col-md-6">
